--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "bun run index.ts"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.6",
     "bun-types": "^0.7.0"
   },
   "dependencies": {
